[package]
name = "battlerust"
description = "A Battleship game implementation in Rust"
version = "0.1.0"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/joamag/battlerust"
keywords = ["battleship", "game", "rust"]
edition = "2018"

[dependencies]
rand = { version = "0.8" }
