[package]
name = "battlerust"
description = "A Battleship game implementation in Rust"
version = "0.3.0"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/joamag/battlerust"
keywords = ["battleship", "game", "rust"]
edition = "2021"
rust-version = "1.82"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]
debug = []

[dependencies]
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[profile.release]
debug = false
lto = true
opt-level = 3

[workspace]
members = [".", "frontends/console"]
