[package]
name = "battlerust-console"
version = "0.3.0"
authors = ["João Magalhães <joamag@gmail.com>"]
description = "A console frontend for Battlerust"
license = "Apache-2.0"
keywords = ["battleship", "game", "rust", "console"]
edition = "2018"

[dependencies.battlerust]
path = "../.."

[target.armv7-unknown-linux-gnueabihf]
cc = "arm-linux-gnueabihf-gcc"
linker = "arm-linux-gnueabihf-gcc"
ar = "arm-linux-gnueabihf-ar"
