[package]
name = "battlerust-console"
version = "0.3.0"
authors = ["João Magalhães <joamag@gmail.com>"]
description = "A console frontend for Battlerust"
license = "Apache-2.0"
keywords = ["battleship", "game", "rust", "console"]
edition = "2021"
rust-version = "1.82"

[dependencies.battlerust]
path = "../.."
